# agent-ssh-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SSH_GATEWAY_GUIDE.md  deploy.example.md  deploy.md  docker-compose.yml  mypy.ini  nginx-gateway.conf.example  nginx-ssh-gateway.conf  nginx-ssh.xloud.ru.conf  projects.yaml  pyproject.toml  requirements.txt
.gitea/workflows/: deploy.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_tz_aware_timestamps.py
app/: access_control.py  agent_token_store.py  api_help.py  ast_refactor.py  audit.py  auth_middleware.py  batch_operations.py  build_info.py  bulk_operations_v2.py  circuit_breaker.py  code_intelligence.py  command_policy.py  config.py  context_manager.py  diff_generator.py  distributed_lock.py  event_hook_delivery.py  event_hook_emitter.py  event_hook_security.py  event_hook_store.py  exceptions.py  file_editor.py  file_tree.py  git_manager.py  job_manager.py  known_hosts.py  main.py  metrics.py  models.py  output_redaction.py  patch_apply.py  project_analytics.py  redis_compat.py  redis_queue.py  search_replace.py  security.py  server_manager.py  session_store.py  smart_context.py  snapshot_manager.py  (+9 more)
app/notifier/: __init__.py  __main__.py  actions.py  callbacks.py  config.py  formatting.py  gateway.py  get_updates.py  policy.py  service.py  status.py  telegram.py
app/routers/: admin_access.py  audit.py  auth.py  batch.py  code.py  context.py  diagnostics.py  event_hooks.py  files.py  git.py  jobs.py  known_hosts.py  logs.py  project_inspection.py  search_replace.py  servers.py  snapshots.py  ssh.py  system.py  templates.py  webhooks.py  workspace.py
app/services/: project_search.py
app/static/: app.js  index.html  style.css
app/workspace/: __init__.py  edit.py  files.py  git.py  models.py  policy.py  preview.py  receipts.py  registry.py  search.py  snapshot.py  tools.py
docker/: .env.example  Dockerfile  docker-compose.example.yml  docker-compose.live.example.yml  docker-compose.notifier.yml  docker-compose.workspace-rw.yml  docker-compose.yml  requirements.txt
docker/mcp-postgres/: init.sql
docker/sshd/: Dockerfile  authorized_keys
docs/: OSS_MAINTAINER_WORKFLOWS.md  RLM_ADAPTER_EXPERIMENT.md  ROUTERS.md  roadmap.md
docs/architecture/: ADR-2026-06-26-agent-backend-routing.md  ADR-2026-07-08-mcp-tool-response-contract.md  AUDIT-2026-07-15-independent-review.md  C3-1-command-profile-routing.md  C3-rejected-profile-override.patch  C5-mcp-local-audit-design.md  GATE-2026-07-15-c2-session5.md
docs/operations/: ACCESS_CONTROL.md  AGENT_HANDOFF_RUNBOOK.md  AUDIT_LOGGING.md  CHATGPT_ATTACH_CHECKLIST.md  CHATGPT_ATTACH_REHEARSAL.md  CHATGPT_TOOL_ATTACH.md  DEPLOYMENT_OVERLAYS.md  DOCKER_ADMIN_TOOLS_RUNBOOK.md  MCP_FLEET_RUNBOOK.md  MCP_OPERATOR_RUNBOOK.md  MCP_PUBLIC_ENDPOINT_RUNBOOK.md  MCP_TOKEN_LEDGER.md  METRICS.md  NOTIFIER.md  SECRETS_ROTATION_RUNBOOK.md  TUNNEL_RUNBOOK.md
examples/chatgpt_remote_mcp/: .env.example  README.md  run_docker_server.py  run_postgres_server.py  server.py
examples/mcp_server/: .env.example  README.md  agent_backend_router.py  agent_tasks.py  agent_tools.py  chatgpt.safe.env.example  chatgpt_tools.py  command_policy.py  config.py  docker_confirm.py  gateway_client.py  handoff.py  latency_metrics.py  mcp_audit.py  mimo_tools.py  oauth_provider.py  opencode.example.jsonc  opencode_tools.py  project_registry.py  self_test.py  server.py  token_store.py  tool_modes.py  tool_results.py  tool_scopes.py  tools_manifest.py  write_modes.py
examples/rlm_gateway_auditor/: .env.example  README.md  auditor.py  gateway_tools.py  requirements.txt
scripts/: access_control_smoke.py  backup-gitea.sh  backup.example.sh  c25_write_smoke.py  chatgpt_tool_attach_smoke.py  check_no_hardcoded_secrets.py  check_public_hygiene.py  codex-smoke.sh  compose_live_preflight.py  mcp_chatgpt_runtime_preflight.py  mcp_enforce_smoke.py  mcp_fleet_healthcheck.py  mcp_token_cli.py  migrate-nginx-ssh-block.py  migrate_tz_aware.sql  migrate_tz_aware_down.sql  mypy-full-report.sh  notifier_dry_run_smoke.py  opencode_runner_wrapper.py  tunnel.mjs  verify_tz_migration.sql
sdk/: __init__.py  session.py  ssh_gateway.py
tests/: conftest.py  helpers.py  test_access_control.py  test_access_control_redis.py  test_admin_access.py  test_agent_backend_router.py  test_agent_tasks.py  test_api_help_docs.py  test_api_route_uniqueness.py  test_app_workspace_registry.py  test_audit.py  test_audit_recent.py  test_audit_wiring.py  test_auth_middleware.py  test_batch_operations.py  test_build_info.py  test_c3_command_policy_contract.py  test_chatgpt_preflight.py  test_circuit_breaker.py  test_circuit_breaker_wiring.py  test_command_policy.py  test_command_policy_enforcement.py  test_command_result.py  test_credential_hygiene.py  test_diagnostics_auth.py  test_diagnostics_integration.py  test_diagnostics_latency.py  test_distributed_lock.py  test_docker_admin_scopes.py  test_docker_client.py  test_docker_confirm.py  test_docker_envelope.py  test_docker_output_redaction.py  test_env_example_contract.py  test_errors.py  test_event_hooks.py  test_event_hooks_integration.py  test_exceptions.py  test_execute_argv_models.py  test_file_editor.py  (+111 more)
(+59 files in other folders)
