[project]
name = "agent-ssh-gateway"
version = "0.1.30a0"
description = "A self-hosted SSH gateway API for agents, automation, and CI/CD workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ivan Solovyov" },
]
keywords = ["ssh", "gateway", "fastapi", "automation", "agents", "ci-cd"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "mcp>=1.28.0",
  "paramiko",
  "pydantic",
  "pydantic-settings",
  "python-multipart",
  "cryptography",
  "redis",
  "prometheus-client",
  "sqlalchemy",
  "alembic",
  "asyncpg",
  "aiosqlite",
  "aiohttp",
  "slowapi",
  "bcrypt>=4.0",
  "PyJWT>=2.8",
  "websockets",
  "unidiff",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
  "mypy",
  "types-PyYAML",
  "types-aiofiles",
  "jsonschema",
  "fakeredis[lua]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = [
  "import-untyped",
  "no-untyped-def",
  "no-untyped-call",
  "annotation-unchecked",
  "union-attr",
  "no-any-return",
  "assignment",
  "attr-defined",
]
plugins = ["sqlalchemy.ext.mypy.plugin"]
