[project]
name = "agent-ssh-gateway"
version = "0.1.41a0"
description = "A self-hosted SSH gateway API for agents, automation, and CI/CD workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ivan Solovyov" },
]
keywords = ["ssh", "gateway", "fastapi", "automation", "agents", "ci-cd"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "mcp>=1.28.0",
  "paramiko",
  "pydantic",
  "pydantic-settings",
  "python-multipart",
  "cryptography",
  "redis",
  "prometheus-client",
  "sqlalchemy",
  "alembic",
  "asyncpg",
  "aiosqlite",
  "aiohttp",
  "slowapi",
  "bcrypt>=4.0",
  "PyJWT>=2.8",
  "requests",
  "sseclient-py",
  "urllib3",
  "websockets",
  "unidiff",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "httpx",
  "httpx2",
  "ruff",
  "mypy",
  "types-PyYAML",
  "types-aiofiles",
  "jsonschema",
  "fakeredis[lua]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "host_smoke: tests requiring live infrastructure (SSH host, nginx, specific filesystem paths). Excluded from CI via -m 'not host_smoke'.",
  "integration: tests that exercise multiple components together (router + registry + policy).",
]
filterwarnings = [
  "error",
  # aiosqlite background threads outlive event loop during test teardown —
  # known upstream issue, not our code. Module filter targets pytest's collector.
  "ignore::pytest.PytestUnhandledThreadExceptionWarning:_pytest.threadexception",
  # Unclosed sockets/event loops from aiosqlite GC — same root cause.
  "ignore::pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception",
  # aiosqlite connections GC'd before .close() — third-party cleanup ordering.
  "ignore::ResourceWarning:aiosqlite.core",
  # Event loop ResourceWarning from asyncio GC — test teardown artifact.
  "ignore::ResourceWarning:asyncio",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
strict = false
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = [
  "import-untyped",
  "no-untyped-def",
  "no-untyped-call",
  "annotation-unchecked",
  "union-attr",
  "no-any-return",
  "assignment",
  "attr-defined",
]
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = [
  "examples/rlm_gateway_auditor",
  "tests/",
  "sdk/",
]

[[tool.mypy.overrides]]
module = "scripts.*"
follow_imports = "skip"
